--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
         color: #0f172a; /* Slate 900 */
         overflow-x: hidden;
         -webkit-tap-highlight-color: transparent;
+        -webkit-font-smoothing: antialiased;
+        -moz-osx-font-smoothing: grayscale;
       }
       
       /* New MEET Dynamic Background */
@@ -65,5 +67,7 @@
 </head>
   <body>
     <div id="root"></div>
+    <!-- CRITICAL: Entry point for Vite/Vercel to load the React App -->
+    <script type="module" src="/index.tsx"></script>
   </body>
 </html>
