--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
     <style>
       body {
         font-family: 'Outfit', sans-serif;
-        background-color: #f8fafc; /* Fallback */
+        background-color: #ffffff;
         color: #0f172a;
         overflow-x: hidden;
         -webkit-tap-highlight-color: transparent;
         -webkit-font-smoothing: antialiased;
       }
       
-      /* Premium Aurora Background - Lighter & Softer */
+      /* Modern Apple-like Mesh Gradient (Static & Clean) */
       .meet-bg {
         position: fixed;
         top: 0;
@@ -29,42 +29,31 @@
         width: 100vw;
         height: 100vh;
         z-index: -1;
+        background-color: #ffffff;
+        background-image: 
+            radial-gradient(at 0% 0%, hsla(253,16%,7%,0) 0, transparent 50%), 
+            radial-gradient(at 50% 0%, hsla(225,39%,30%,0) 0, transparent 50%), 
+            radial-gradient(at 100% 0%, hsla(339,49%,30%,0) 0, transparent 50%);
+        /* Adding soft colorful orbs */
         background: 
-            radial-gradient(at 0% 0%, rgba(255, 200, 221, 0.5) 0px, transparent 50%),
-            radial-gradient(at 100% 0%, rgba(196, 240, 255, 0.5) 0px, transparent 50%),
-            radial-gradient(at 100% 100%, rgba(220, 255, 220, 0.5) 0px, transparent 50%),
-            radial-gradient(at 0% 100%, rgba(230, 230, 255, 0.5) 0px, transparent 50%),
-            linear-gradient(120deg, #fdfbf7 0%, #f4f7f6 100%);
-        background-size: 200% 200%;
-        animation: aurora 20s ease infinite alternate;
-      }
-
-      @keyframes aurora {
-        0% { background-position: 0% 50%; }
-        50% { background-position: 100% 50%; }
-        100% { background-position: 0% 50%; }
+            radial-gradient(circle at 15% 50%, rgba(230, 240, 255, 0.8), transparent 40%),
+            radial-gradient(circle at 85% 30%, rgba(240, 230, 255, 0.8), transparent 40%),
+            radial-gradient(circle at 50% 80%, rgba(255, 240, 230, 0.6), transparent 40%);
+        filter: blur(40px);
       }
 
       /* Premium Glass Utilities */
       .glass-panel {
-        background: rgba(255, 255, 255, 0.75);
-        backdrop-filter: blur(24px) saturate(180%);
-        -webkit-backdrop-filter: blur(24px) saturate(180%);
-        border: 1px solid rgba(255, 255, 255, 0.8);
-        box-shadow: 
-          0 4px 6px -1px rgba(0, 0, 0, 0.02),
-          0 20px 40px -8px rgba(0, 0, 0, 0.04);
+        background: rgba(255, 255, 255, 0.8);
+        backdrop-filter: blur(20px);
+        -webkit-backdrop-filter: blur(20px);
+        border: 1px solid rgba(255, 255, 255, 0.6);
+        box-shadow: 0 4px 30px rgba(0, 0, 0, 0.03);
       }
       
-      .glass-card-hover:hover {
-        background: rgba(255, 255, 255, 0.85);
-        transform: translateY(-2px);
-        box-shadow: 0 10px 30px -5px rgba(0, 0, 0, 0.05);
-      }
-
       /* Scrollbar */
       .custom-scrollbar::-webkit-scrollbar {
-        width: 0px; /* Hidden but scrollable for cleaner look */
+        width: 0px;
         background: transparent;
       }
 
